feat light mode and other feature
